// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/Button <Button /> snapshots should match the snapshot when the button is a result 1`] = `
<styled.button
  onClick={[Function]}
  purpose="result"
>
  +
</styled.button>
`;

exports[`src/components/Button <Button /> snapshots should match the snapshot when the button is an operator 1`] = `
<styled.button
  onClick={[Function]}
  purpose="operator"
>
  +
</styled.button>
`;

exports[`src/components/Button <Button /> snapshots should match the snapshot with the default props 1`] = `
<styled.button
  onClick={[Function]}
  purpose="numeric"
>
  +
</styled.button>
`;
